--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -42,10 +42,10 @@ set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY MIPS_PROCESSOR
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:43:01  OCTOBER 18, 2023"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
@@ -64,4 +64,6 @@ set_global_assignment -name VHDL_FILE controlunit.vhd
 set_global_assignment -name VHDL_FILE ALUControl.vhd
 set_global_assignment -name VHDL_FILE Data_Memory_32bits.vhd
 set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
+set_global_assignment -name VHDL_FILE shifter.vhd
+set_global_assignment -name VHDL_FILE adder.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
