--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY MIPS_PROCESSOR
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:43:01  OCTOBER 18, 2023"
-set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
@@ -66,4 +66,5 @@ set_global_assignment -name VHDL_FILE Data_Memory_32bits.vhd
 set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
 set_global_assignment -name VHDL_FILE shifter.vhd
 set_global_assignment -name VHDL_FILE adder.vhd
+set_global_assignment -name VHDL_FILE shifter_26.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
