--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -45,9 +45,7 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:43:01  OCTOBER 18, 20
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
-set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_TOOL "<None>"
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
@@ -57,14 +55,10 @@ set_global_assignment -name VHDL_FILE PCounter.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE sign_extend.vhd
 set_global_assignment -name VHDL_FILE RegisterFile.vhd
 set_global_assignment -name VHDL_FILE ALU.vhd
 set_global_assignment -name VHDL_FILE controlunit.vhd
 set_global_assignment -name VHDL_FILE ALUControl.vhd
 set_global_assignment -name VHDL_FILE Data_Memory_32bits.vhd
 set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
-set_global_assignment -name VHDL_FILE shifter.vhd
-set_global_assignment -name VHDL_FILE adder.vhd
-set_global_assignment -name VHDL_FILE shifter_26.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
