--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -61,5 +61,5 @@ set_global_assignment -name VHDL_FILE controlunit.vhd
 set_global_assignment -name VHDL_FILE ALUControl.vhd
 set_global_assignment -name VHDL_FILE Data_Memory_32bits.vhd
 set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
-set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
