--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -72,4 +72,5 @@ set_global_assignment -name POWER_AUTO_COMPUTE_TJ OFF
 set_global_assignment -name POWER_TJ_VALUE 0
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform2.vwf
+set_global_assignment -name VHDL_FILE Hazard_Unit.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
