--- a/MIPS_PROCESSOR.qsf
+++ b/MIPS_PROCESSOR.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 20.1.0 Build 711 06/05/2020 SJ Lite Edition
-# Date created = 20:11:28  November 01, 2023
+# Date created = 15:16:34  December 21, 2023
 #
 # -------------------------------------------------------------------------- #
 #
@@ -37,40 +37,51 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone IV E"
-set_global_assignment -name DEVICE EP4CE30F29I8L
+set_global_assignment -name FAMILY "Cyclone V"
+set_global_assignment -name DEVICE 5CGXFC7C7F23C8
 set_global_assignment -name TOP_LEVEL_ENTITY MIPS_PROCESSOR
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:11:28  NOVEMBER 01, 2023"
-set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:16:34  DECEMBER 21, 2023"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 100
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name VHDL_FILE MIPS_PROCESSOR.vhd
-set_global_assignment -name VHDL_FILE Forward_Unit.vhd
-set_global_assignment -name VHDL_FILE Data_Memory.vhd
-set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
-set_global_assignment -name VHDL_FILE Register_File.vhd
-set_global_assignment -name VHDL_FILE ALU.vhd
-set_global_assignment -name VHDL_FILE PC_Counter.vhd
-set_global_assignment -name VHDL_FILE ALU_Control.vhd
-set_global_assignment -name VHDL_FILE Control_Unit.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
-set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
-set_global_assignment -name POWER_AUTO_COMPUTE_TJ OFF
-set_global_assignment -name POWER_TJ_VALUE 0
-set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform2.vwf
+set_global_assignment -name VHDL_FILE Sign_Extend_Unit.vhd
+set_global_assignment -name VHDL_FILE Register_File.vhd
+set_global_assignment -name VHDL_FILE Program_Counter.vhd
+set_global_assignment -name VHDL_FILE Multiplexer_32_Bits_4_Inputs.vhd
+set_global_assignment -name VHDL_FILE Multiplexer_32_Bits_2_Inputs.vhd
+set_global_assignment -name VHDL_FILE Multiplexer_5_Bits_2_Inputs.vhd
+set_global_assignment -name VHDL_FILE Multiplexer_1_Bit_2_Inputs.vhd
+set_global_assignment -name VHDL_FILE MIPS_PROCESSOR.vhd
+set_global_assignment -name VHDL_FILE Instruction_Memory.vhd
 set_global_assignment -name VHDL_FILE Hazard_Unit.vhd
+set_global_assignment -name VHDL_FILE Forwarding_Unit.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_32_bits_Without_Enable.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_32_bits_With_Enable.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_5_bits_Without_Enable.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_2_bits_Without_Enable.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_1_bit_Without_Enable.vhd
+set_global_assignment -name VHDL_FILE Flip_Flop_1_Bit_With_Enable.vhd
+set_global_assignment -name VHDL_FILE Data_Memory.vhd
+set_global_assignment -name VHDL_FILE Control_Unit.vhd
+set_global_assignment -name VHDL_FILE Comparator_32_Bits.vhd
+set_global_assignment -name VHDL_FILE Branch_Prediction_Buffer.vhd
+set_global_assignment -name VHDL_FILE Branch_Forwarding_Unit.vhd
+set_global_assignment -name VHDL_FILE Arithmetic_Logic_Unit.vhd
+set_global_assignment -name VHDL_FILE ALU_Control.vhd
+set_global_assignment -name VHDL_FILE Adder_32_Bits.vhd
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
